# blogposts_code

./: README.md
fifty_shapes_of_time/: fifty_shapes_of_time_code.ipynb
graph_nns_series/heterogeneous_graphs_intro/: countries_query.sparql  country_data_to_hetero_graph.ipynb  neo4jqueries.cypher
graph_nns_series/llm_knowledge_extraction/01_classic_approach/: 1. rdf_dbpedia_approach.ipynb  dbpedia_query.rq  dbpedia_query_construct.rq  network_graph.html
graph_nns_series/llm_knowledge_extraction/02_svo_approach/: graph.html  graph_utils.py  lang_kg_building_demo.ipynb  lang_utils.py
graph_nns_series/llm_knowledge_extraction/03_llama_index_knowledge_base/: LLM_graph.html  llama_demo.ipynb  llm_utils.py
graph_nns_series/llm_knowledge_extraction/data/: trump_vs_biden.txt
graph_nns_series/pyg_pyl_perfect_match/: pytorch-geometric-lightning-perfect-match.ipynb
llm_text2graph/: README.md  article_to_graph_llm.ipynb  graph_doc.pkl  llm_graph.html  manual_graph_from_text.pkl  pyproject.toml
nodepiece_from_node_ids_to_tokens/: models.py  nodepiece_post.ipynb  tokenization.py
portfolio_optimization/: basic_portfolio_optimization.ipynb
